packages/components/src/EmptyState/EmptyState.module.scss
@import "~@kaizen/design-tokens/sass/spacing";
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/border";
@import "./mixins";

.container {
  --empty-state-border-width: var(--border-width-1);

  display: flex;
  justify-content: space-around;
  width: 100%;
  padding: calc(2% - var(--empty-state-border-width))
    calc(var(--spacing-24) - var(--empty-state-border-width));
  color: $color-purple-800;
  border: var(--empty-state-border-width) solid var(--empty-state-border-color);
  border-radius: var(--border-solid-border-radius);
  background-color: var(--empty-state-background-color);

  @include small {
    flex-direction: column;
    align-items: center;
    padding-block: calc(var(--spacing-24) - var(--empty-state-border-width));
  }

  &.straightCorners {
    border-radius: 0;
  }

  // These class names must match the possible values of the component's layoutContext prop
  &.sidebarAndContent {
    @include large-sidebar-and-content {
      padding-top: $spacing-md;
      padding-bottom: $spacing-md;
    }
  }

  &.contentOnly {
    @include large-content-only {
      padding-top: $spacing-md;
      padding-bottom: $spacing-md;
    }
  }
}

/** @deprecated */
.positive {
  --empty-state-border-color: var(--color-green-500);
  --empty-state-background-color: var(--color-green-100);
}

.negative,
.action {
  --empty-state-border-color: var(--color-red-500);
  --empty-state-background-color: var(--color-red-100);
}

.neutral {
  --empty-state-border-color: var(--color-purple-400);
  --empty-state-background-color: var(--color-purple-100);
}

/** end @deprecated */
.success {
  --empty-state-border-color: var(--color-green-500);
  --empty-state-background-color: var(--color-green-100);
}

.warning {
  --empty-state-border-color: var(--color-red-500);
  --empty-state-background-color: var(--color-red-100);
}

.informative {
  --empty-state-border-color: var(--color-blue-400);
  --empty-state-background-color: var(--color-blue-100);
}

.expert-advice {
  --empty-state-border-color: var(--color-purple-400);
  --empty-state-background-color: var(--color-purple-100);
}

.illustrationSide,
.textSide {
  display: inline-block;
}

.illustrationSide {
  min-width: 224px;
  flex-grow: 0;
  flex-shrink: 1;
  margin-bottom: $spacing-md;

  @include small {
    width: 224px;
  }

  @include medium {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    margin-bottom: 0;
    min-width: 40%;
    max-width: 50%;
    flex-grow: 1;
    box-sizing: border-box;
    padding-inline-end: $spacing-md;
  }

  .sidebarAndContent & {
    @include large-sidebar-and-content {
      flex-shrink: 1;
      flex-basis: auto;
    }
  }

  .contentOnly & {
    @include large-content-only {
      flex-shrink: 1;
      flex-basis: auto;
    }
  }
}

.illustration,
.illustrationSide video {
  max-width: 100%;
  max-height: 366px;
  width: auto;

  // Fixes for IE11 Flexbox issues
  min-height: 196px;

  @include small {
    max-height: 196px;
  }
}

.textSide {
  display: flex;
  flex-grow: 1;
  flex-shrink: 1;
  align-items: center;
  -webkit-font-smoothing: antialiased;

  @include medium {
    flex-basis: 50%;
    flex-grow: 0;
  }
}

.textSideInner {
  flex-grow: 0;
  height: auto;
  margin: 0 $spacing-sm;

  @include small {
    margin-bottom: 0;
  }

  @include medium {
    max-width: 426px;
  }
}

.heading {
  margin-bottom: $spacing-md;

  @media (max-width: (375px)) {
    @include typography-heading-3-sm;
  }
}

.description {
  margin-bottom: $spacing-md;
}

